--- a/client/src/index.template.html
+++ b/client/src/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
